apps/usenet/plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: usenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: ghcr.io/linuxserver/plex:1.43.4.10903-e5521bd8c-ls326
          ports:
            - containerPort: 32400
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /config/backup
              name: backup
            - mountPath: /data/tvshows
              name: tvshows
            - mountPath: /data/movies
              name: movies
            - mountPath: /data/movies2
              name: movies2
            - mountPath: /data/music
              name: music
            - mountPath: /transcode
              name: tmpfs
          resources:
            requests:
              gpu.intel.com/i915: 1
              memory: 4Gi
            limits:
              gpu.intel.com/i915: 1
              memory: 16Gi
          startupProbe:
            httpGet:
              path: /identity
              port: 32400
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plex-data
        - name: backup
          persistentVolumeClaim:
            claimName: plex-backup
        - name: tvshows
          hostPath:
            path: /mnt/tank/media/tv
            type: Directory
        - name: movies
          hostPath:
            path: /mnt/tank/media/movies
            type: Directory
        - name: movies2
          hostPath:
            path: /mnt/tank/media/movies2
            type: Directory
        - name: music
          hostPath:
            path: /mnt/tank/media/music
            type: Directory
        - name: tmpfs
          emptyDir:
            medium: Memory
