apps/usenet/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: usenet
spec:
  ports:
    - port: 32400
      targetPort: 32400
  selector:
    app: plex
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
